# fastapi_test_task

./: .gitignore  pyproject.toml  tortoise_conf.py
migrations/models/: 0_20210916161508_init.sql  1_20210918205052_add_user_email.sql
src/: main.py  models.py  schemas.py  settings.py
src/services/: user_base_crud.py
